--- a/todo_app/templates/todo_app/todo_list.html
+++ b/todo_app/templates/todo_app/todo_list.html
@@ -1,4 +1,3 @@
-<!-- todo_list/todo_app/templates/todo_app/todo_list.html -->
 {% extends "todo_app/base.html" %}
 {% block content %}
 <div>
@@ -13,7 +12,8 @@
                 <div>
                     <div
                         role="button"
-                        onclick="location.href='#'">
+                        onclick="location.href
+                       '{% url "item-update" todo_list.id todo.id %}'" >
                         {{ todo.title }}
                         (Due {{ todo.due_date | date:"l, F j" }})
                     </div>
@@ -25,9 +25,15 @@
         </ul>
         <p>
             <input
-                value="Adicionar Tarefa"
+                value="Adicionar novo item"
                 type="button"
-                onclick="location.href='#'" />
+                onclick="location.href=
+                '{% url "item-add" todo_list.id %}'" />
+            <input
+                value="Excluir esta lista"
+                type="button"
+                onclick="location.href=
+                '{% url "list-delete" todo_list.id %}'" />
         </p>
     </div>
 </div>
